--- a/app/src/main/res/layout/add_article_topics_activity_new.xml
+++ b/app/src/main/res/layout/add_article_topics_activity_new.xml
@@ -178,4 +178,51 @@
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
     android:visibility="gone" />
+
+  <RelativeLayout
+    android:id="@+id/toolTipContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/transparent"
+    android:clickable="true"
+    android:elevation="@dimen/space_22"
+    android:focusable="true"
+    android:visibility="gone">
+
+    <androidx.cardview.widget.CardView
+      android:id="@+id/bottomTooltip"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentBottom="true"
+      android:layout_margin="16dp"
+      android:elevation="@dimen/space_4"
+      android:visibility="visible"
+      app:cardCornerRadius="4dp">
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/tooltip_shape_layout">
+
+        <com.mycity4kids.widget.CustomFontTextView
+          android:id="@+id/headerText"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:gravity="center"
+          android:paddingStart="@dimen/space_16"
+          android:paddingTop="@dimen/space_16"
+          android:paddingEnd="@dimen/space_16"
+          android:paddingBottom="@dimen/space_16"
+          android:text="Tags help Moms discover your blog."
+          android:textColor="@color/campaign_515151"
+          android:textSize="16sp"
+          app:fontName="Roboto-Regular.ttf"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+  </RelativeLayout>
 </RelativeLayout>
