--- a/app/src/main/res/layout/article_image_tag_publish.xml
+++ b/app/src/main/res/layout/article_image_tag_publish.xml
@@ -1,164 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rootLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/rootLayout"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ToolbarTheme"
-        app:titleTextAppearance="@style/ToolbarTheme.Title">
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="?attr/colorPrimary"
+      android:minHeight="?attr/actionBarSize"
+      app:theme="@style/ToolbarTheme"
+      app:titleTextAppearance="@style/ToolbarTheme.Title">
 
         <RelativeLayout
-            android:id="@+id/toolbarRelativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="visible">
+          android:id="@+id/toolbarRelativeLayout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:visibility="visible">
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/toolbarTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/choose_article_image.toolbar.title"
-                android:textColor="@color/choose_article_image.toolbar.title"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf" />
+              android:id="@+id/toolbarTitle"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerVertical="true"
+              android:text="@string/choose_article_image.toolbar.title"
+              android:textColor="@color/choose_article_image.toolbar.title"
+              android:textSize="20sp"
+              app:fontName="oswald_regular.ttf" />
 
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/uploadImageLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="2dp">
+      android:id="@+id/uploadImageLayout"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/toolbar"
+      android:layout_marginLeft="8dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginRight="8dp"
+      android:layout_marginBottom="2dp">
 
         <RelativeLayout
-            android:id="@+id/uploadImageContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/grey_light"
-            android:padding="10dp"
-            android:visibility="visible">
+          android:id="@+id/uploadImageContainer"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:background="@color/grey_light"
+          android:padding="10dp"
+          android:visibility="visible">
 
             <ImageView
-                android:id="@+id/imvAuthorThumb"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:src="@drawable/ic_camera" />
+              android:id="@+id/imvAuthorThumb"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_centerHorizontal="true"
+              android:layout_marginTop="20dp"
+              android:layout_marginBottom="10dp"
+              android:src="@drawable/ic_camera" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/txvArticleTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imvAuthorThumb"
-                android:layout_marginBottom="20dp"
-                android:ellipsize="end"
-                android:gravity="center"
-                android:text="@string/choose_article_image.upload_photo"
-                android:textColor="@color/choose_article_image.upload_photo"
-                android:textSize="17sp"
-                app:fontName="oswald.ttf" />
+              android:id="@+id/txvArticleTitle"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/imvAuthorThumb"
+              android:layout_marginBottom="20dp"
+              android:ellipsize="end"
+              android:gravity="center"
+              android:text="@string/choose_article_image.upload_photo"
+              android:textColor="@color/choose_article_image.upload_photo"
+              android:textSize="17sp"
+              app:fontName="oswald.ttf" />
         </RelativeLayout>
 
         <ImageView
-            android:id="@+id/articleImage"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_below="@id/toolbar"
-            android:scaleType="center"
-            android:src="@drawable/default_article"
-            android:visibility="gone" />
+          android:id="@+id/articleImage"
+          android:layout_width="match_parent"
+          android:layout_height="180dp"
+          android:layout_below="@id/toolbar"
+          android:scaleType="center"
+          android:src="@drawable/default_article"
+          android:visibility="gone" />
 
         <TextView
-            android:id="@+id/changePictureTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/uploadImageLayout"
-            android:layout_alignRight="@+id/uploadImageLayout"
-            android:layout_alignBottom="@+id/uploadImageLayout"
-            android:layout_gravity="bottom|right"
-            android:background="@color/publish_article.tag_images.selected_bg"
-            android:padding="5dp"
-            android:text="@string/publish_article.upload_image.change_photo"
-            android:textColor="@color/white_color"
-            android:visibility="gone" />
+          android:id="@+id/changePictureTextView"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignEnd="@+id/uploadImageLayout"
+          android:layout_alignRight="@+id/uploadImageLayout"
+          android:layout_alignBottom="@+id/uploadImageLayout"
+          android:layout_gravity="bottom|right"
+          android:background="@color/publish_article.tag_images.selected_bg"
+          android:padding="5dp"
+          android:text="@string/publish_article.upload_image.change_photo"
+          android:textColor="@color/white_color"
+          android:visibility="gone" />
     </androidx.cardview.widget.CardView>
 
     <GridView
-        android:id="@+id/gridview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/publishTextView"
-        android:layout_below="@id/uploadImageLayout"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:horizontalSpacing="5dp"
-        android:numColumns="2"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp"
-        android:visibility="visible" />
+      android:id="@+id/gridview"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_above="@+id/publishTextView"
+      android:layout_below="@id/uploadImageLayout"
+      android:layout_marginTop="10dp"
+      android:gravity="center"
+      android:horizontalSpacing="5dp"
+      android:numColumns="2"
+      android:stretchMode="columnWidth"
+      android:verticalSpacing="10dp"
+      android:visibility="visible" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/uploadImageLayout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        android:visibility="invisible" />
+      android:id="@+id/progressBar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/uploadImageLayout"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="80dp"
+      android:visibility="invisible" />
 
     <RelativeLayout
-        android:id="@+id/relativeLoadingView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/gridview"
-        android:background="#80000000"
-        android:paddingBottom="5dp"
-        android:visibility="gone">
+      android:id="@+id/relativeLoadingView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignBottom="@+id/gridview"
+      android:background="#80000000"
+      android:paddingBottom="5dp"
+      android:visibility="gone">
 
         <View
-            android:id="@+id/sepaartorView"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="1dp"
-            android:background="#DEDEDE" />
+          android:id="@+id/sepaartorView"
+          android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:layout_marginBottom="1dp"
+          android:background="#DEDEDE" />
 
         <TextView
-            android:id="@+id/txvLoadMore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/sepaartorView"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="@string/loading_txt"
-            android:textColor="@color/white_color" />
+          android:id="@+id/txvLoadMore"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@id/sepaartorView"
+          android:layout_centerInParent="true"
+          android:layout_centerVertical="true"
+          android:gravity="center"
+          android:padding="5dp"
+          android:text="@string/loading_txt"
+          android:textColor="@color/white_color" />
 
         <ImageView
-            android:id="@+id/imgLoader"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/sepaartorView"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="4dp"
-            android:layout_toLeftOf="@id/txvLoadMore"
-            android:src="@drawable/progress_spinner" />
+          android:id="@+id/imgLoader"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@id/sepaartorView"
+          android:layout_centerVertical="true"
+          android:layout_marginTop="4dp"
+          android:layout_toLeftOf="@id/txvLoadMore"
+          android:src="@drawable/progress_spinner" />
     </RelativeLayout>
 
     <com.mycity4kids.widget.CustomFontTextView
@@ -170,12 +170,74 @@
       android:layout_marginTop="10dp"
       android:layout_marginBottom="0dp"
       android:background="@color/white_color"
-      android:elevation="20dp"
+      android:elevation="@dimen/space_10"
       android:gravity="center"
       android:padding="15dp"
       android:text="@string/choose_article_image.publish"
       android:textColor="@color/app_red"
       android:textSize="17sp"
       app:fontName="oswald_regular.ttf" />
+    <RelativeLayout
+      android:id="@+id/toolTipContainer"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@color/transparent"
+      android:clickable="true"
+      android:elevation="@dimen/space_22"
+      android:focusable="true"
+      android:visibility="gone">
 
+        <androidx.cardview.widget.CardView
+          android:id="@+id/bottomTooltip"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_above="@id/publishTextViewToolTip"
+          android:layout_margin="16dp"
+          android:elevation="@dimen/space_4"
+          android:visibility="visible"
+          app:cardCornerRadius="4dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@drawable/tooltip_shape_layout">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                  android:id="@+id/headerText"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:gravity="center"
+                  android:paddingStart="@dimen/space_16"
+                  android:paddingTop="@dimen/space_16"
+                  android:paddingEnd="@dimen/space_16"
+                  android:paddingBottom="@dimen/space_16"
+                  android:text="Blogs with an interesting image get more readership."
+                  android:textColor="@color/campaign_515151"
+                  android:textSize="16sp"
+                  app:fontName="Roboto-Regular.ttf"
+                  app:layout_constraintEnd_toEndOf="parent"
+                  app:layout_constraintStart_toStartOf="parent"
+                  app:layout_constraintTop_toTopOf="parent" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <com.mycity4kids.widget.CustomFontTextView
+          android:id="@+id/publishTextViewToolTip"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_alignParentStart="true"
+          android:layout_alignParentBottom="true"
+          android:layout_marginTop="10dp"
+          android:layout_marginBottom="0dp"
+          android:background="@color/white_color"
+          android:elevation="@dimen/space_4"
+          android:gravity="center"
+          android:padding="15dp"
+          android:text="@string/choose_article_image.publish"
+          android:textColor="@color/app_red"
+          android:textSize="17sp"
+          app:fontName="oswald_regular.ttf" />
+    </RelativeLayout>
 </RelativeLayout>
