--- a/app/src/main/res/layout/groups_grid_item_layout.xml
+++ b/app/src/main/res/layout/groups_grid_item_layout.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:elevation="0dp"
     app:cardCornerRadius="3dp"
     app:cardElevation="0dp">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:id="@+id/groupsGridItemView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
