--- a/app/src/main/res/layout/video_upload_progress_activity.xml
+++ b/app/src/main/res/layout/video_upload_progress_activity.xml
@@ -131,7 +131,6 @@
       android:textColor="@color/video_progress.uploading_msg"
       app:fontName="oswald.ttf" />
   </RelativeLayout>
-
   <RelativeLayout
     android:id="@+id/uploadFinishContainer"
     android:layout_width="match_parent"
@@ -192,7 +191,9 @@
       android:layout_height="wrap_content"
       android:layout_below="@+id/youAreDoneView"
       android:layout_centerHorizontal="true"
-      android:src="@drawable/ic_uploaded" />
+      android:layout_marginTop="@dimen/space_50"
+      android:layout_marginBottom="@dimen/space_50"
+      android:src="@drawable/ic_moderation_content" />
 
     <com.mycity4kids.widget.CustomFontTextView
       android:id="@+id/wayToGo"
@@ -200,10 +201,12 @@
       android:layout_height="wrap_content"
       android:layout_below="@+id/uploadFinishImageView"
       android:layout_centerHorizontal="true"
+      android:layout_marginStart="30dp"
       android:layout_marginTop="20dp"
+      android:layout_marginEnd="30dp"
       android:autoLink="web"
       android:gravity="center_horizontal"
-      android:text="@string/video_progress.way_to_go"
+      android:text="Congratulation! Your post has been sent for the approval"
       android:textColor="@color/video_progress.way_to_go"
       android:textSize="22sp"
       app:fontName="oswald_regular.ttf" />
@@ -222,12 +225,13 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/underline2"
-      android:layout_alignParentStart="true"
-      android:layout_alignParentLeft="true"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="@dimen/space_18"
       android:gravity="center"
       android:padding="20dp"
-      android:text="@string/video_progress.success_msg"
-      android:textColor="@color/video_progress.success_msg"
+      android:text="Moderation Guidelines"
+      android:textColor="@color/app_red"
+      android:textSize="@dimen/space_16"
       app:fontName="oswald.ttf" />
 
     <com.mycity4kids.widget.CustomFontTextView
@@ -244,6 +248,7 @@
       android:text="@string/video_progress.okay"
       android:textColor="@color/video_progress.okay"
       android:textSize="18sp"
+      android:visibility="gone"
       app:fontName="oswald.ttf" />
 
     <RelativeLayout
@@ -251,8 +256,8 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
-      android:visibility="gone"
-      android:layout_marginBottom="50dp">
+      android:layout_marginBottom="50dp"
+      android:visibility="gone">
 
       <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/needOpinionTextView"
