--- a/app/src/main/res/layout/view_time_line.xml
+++ b/app/src/main/res/layout/view_time_line.xml
@@ -86,6 +86,7 @@
             android:background="@color/line_button" />
 
         <LinearLayout
+          android:id="@+id/bottomLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/lineTop"
